# girona_utils

./: CMakeLists.txt  package.xml  setup.py
action/: LookAt.action  PID.action  Path.action  Pursuit.action
config/: test.rviz
doc/: manifest.yaml
doc/html/: graph_legend.html  index-msg.html  index.html
doc/html/action/: PID.html  Path.html  Pursuit.html
doc/html/msg/: PathStatus.html
files/: pool1.bt  pool2.bt  testPath.bag
launch/: auv_lookat_controller.launch  auv_pose_controller.launch  map.launch  viz.launch
msg/: PathStatus.msg
scripts/: lookat_controller.cpp  path_action.py  path_following_server.cpp  path_following_server_test.cpp  path_following_server_tp.cpp  pid_action.cpp  pursuit.py  pursuit_controller.cpp  pursuit_test.py
src/girona_utils/: path_manager.py
